--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>com.example</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ElgueraRestEVC</name>
-	<description>Evaluacion continua de Elguera Amado Rodrigo</description>
+	<name>HinostrozaRestEVC</name>
+	<description>Andy Noe Hinostroza Anguiz Evaluacion 2</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
