--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:postgresql://dpg-cihoju2ip7vpelq39q60-a.oregon-postgres.render.com/dbrenderandy?user=dbrenderandy_user&password=lDZjmqWjRD6P6UVRtiQ0gltQpISu0o0X&sslmode=require
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql: false
